# randrum

./: .gitignore  DOCS.md  README.md
randrum/: Cargo.toml  README.md
randrum/exports/: pee.MID  realtest.MID  test.MID  testtree.MID  testtwo.MID
randrum/input/crash/: 1only.MID  only1.MID
randrum/input/hihat/: 8thtriplets.MID  and.MID  onlyand.MID  straight8ths.MID  triplets.MID
randrum/input/kick/: 1and3.MID  4floor.MID  4onfloor.MID  amen.MID  amenkick.MID
randrum/input/none/: none.MID
randrum/input/ride/: straight8ths.MID  triplet8ths.MID  triplets.MID
randrum/input/snare/: 2and4.MID  3only.MID
randrum/input/toms/: build.MID  rockgroove.MID  straight8thsA24.MID
randrum/src/: args.rs  main.rs  merge.rs
randrum/test/: k13s24h8.MID  k4fs24.MID
